--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "lib/solmate"]
-	path = lib/solmate
+	path = onchain/lib/solmate
 	url = https://github.com/Rari-Capital/solmate.git
 	branch = v7
