fix: fsm_specification.yaml

--- a/mas/fsm_specification.yaml
+++ b/mas/fsm_specification.yaml
@@ -5,8 +5,8 @@ alphabet_in:
 - ALREADY_OFFERED
 - LOAN_REQUESTS_EXIST
 - NO_LOANS_REQUESTS
-- NO_FUNDS_TO_LEND
-- FUNDS_AVAILABLE
+- SUFFICIENT_FUNDS
+- INSUFFICIENT_FUNDS
 - WORTHLESS_NFT
 - OFFERABLE_NFT
 default_start_state: InitialiseRound
