--- a/mas/packages/zarathustra/agents/collaterisation_station/aea-config.yaml
+++ b/mas/packages/zarathustra/agents/collaterisation_station/aea-config.yaml
@@ -23,3 +23,11 @@ logging_config:
 dependencies:
   open-aea-ledger-ethereum: {}
 default_connection: null
+---
+public_id: valory/abci:0.1.0
+type: connection
+config:
+  target_skill_id: zarathustra/collaterisation_station_abci:0.1.0
+  host: ${str:localhost}
+  port: ${int:26658}
+  use_tendermint: ${bool:false}
