--- a/mas/pyproject.toml
+++ b/mas/pyproject.toml
@@ -27,6 +27,8 @@ open-aea-test-autonomy = "0.10.7"
 open-autonomy = "0.10.7"
 autonomy-dev = {extras = ["all"], version = "^0.2.2"}
 pyyaml = "==5.4.1"
+hypothesis = "6.21.6"
+py-ecc = "5.2.0"
 
 
 
