--- a/mas/packages/zarathustra/agents/collateralisation_station/aea-config.yaml
+++ b/mas/packages/zarathustra/agents/collateralisation_station/aea-config.yaml
@@ -22,6 +22,10 @@ protocols:
 - valory/tendermint:0.1.0:bafybeicusvezoqlmyt6iqomcbwaz3xkhk2qf3d56q5zprmj3xdxfy64k54
 skills:
 - zarathustra/collateralisation_station_abci:0.1.0:bafybeidelve2gequojc2qkmvlvjof5dvg7s2aq5r7ehtdsz55of3lmkkjq
+- valory/abstract_abci:0.1.0:bafybeiexad4gxpw4g3443lb5aufw477lgcpgtx44lklyo5hay2vhwz5g3e
+- valory/abstract_round_abci:0.1.0:bafybeih2eokievudt4a7x7dwd6uyan7cgwr3y2t4dtvzy4xsubbbumf34m
+- valory/registration_abci:0.1.0:bafybeig3jo3fhcxz7xgwpxnmf74ann2bwlqyaq2466wrkg5mbc33wmpk6y
+- valory/reset_pause_abci:0.1.0:bafybeicuma62mkfb36ygsycufhjqt6jqffi7zhhuxdlgdvmq6kcjl2ebm4
 default_ledger: ethereum
 required_ledgers:
 - ethereum
