[feat] update with sample for pwn issues

--- a/mas/Makefile
+++ b/mas/Makefile
@@ -1,4 +1,11 @@
 # Makefile
+.PHONY:
+install:
+	poetry run pip install 'cython<3.0.0'
+	poetry run pip install wheel
+	poetry run pip install pyyaml==5.4.1 --no-build-isolation -v
+	poetry install --no-root
+
 
 .PHONY: clean
 clean: clean-build clean-pyc clean-test clean-docs
