fix: collateralisation_station_abci skill

--- a/mas/packages/zarathustra/skills/collateralisation_station_abci/fsm_specification.yaml
+++ b/mas/packages/zarathustra/skills/collateralisation_station_abci/fsm_specification.yaml
@@ -34,6 +34,8 @@ states:
 - PrepareOfferTxSubmissionRound
 - FinishedRound
 transition_func:
+    (InitialiseRound, DONE): CheckOutstandingLoansRound
+
     (PostTransactionRound, DONE): PrepareUpdateRound
 
     (PrepareUpdateRound, DONE): PrepareUpdateTxSubmissionRound
