chore: use_termination: false

--- a/mas/packages/zarathustra/skills/collateralisation_station_abci/skill.yaml
+++ b/mas/packages/zarathustra/skills/collateralisation_station_abci/skill.yaml
@@ -125,6 +125,7 @@ models:
       tendermint_p2p_url: localhost:26656
       tendermint_url: http://localhost:26657
       tx_timeout: 10.0
+      use_termination: false
       validate_timeout: 1205
     class_name: Params
   requests:
