--- a/mas/packages/zarathustra/skills/collateralisation_station_chained_abci/fsm_specification.yaml
+++ b/mas/packages/zarathustra/skills/collateralisation_station_chained_abci/fsm_specification.yaml
@@ -26,7 +26,7 @@ alphabet_in:
 default_start_state: RegistrationStartupRound
 final_states:
 - FailedRound
-label: ComposedAbciApp
+label: CollaterisationStationChainedAbciApp
 start_states:
 - RegistrationRound
 - RegistrationStartupRound
