--- a/mas/packages/zarathustra/skills/collateralisation_station_chained_abci/skill.yaml
+++ b/mas/packages/zarathustra/skills/collateralisation_station_chained_abci/skill.yaml
@@ -7,30 +7,26 @@ license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
   __init__.py: bafybeif7hvkrhmc6znpvjcgi74verpqozavhfk3ovca4akojglop5vlyuy
-  behaviours.py: bafybeib6xxl4egcri2bzxvooxnftcxwzhgez6cskhnqimebvsumwqf5h6a
+  behaviours.py: bafybeie6snhl4knnptobymso5bhuyuav7cf5pihiuffcrobq32mpdgqn54
   composition.py: bafybeiddmwnzn767bkhz4bi3dl6wy7iad6levzyoohyzwambqv6wazsqfa
-  dialogues.py: bafybeibhwssyf5cwpdknnrcokcj6gnriyrmysaqypoisfxab7jvbqb6yka
-  fsm_specification.yaml: bafybeif23ebidpg4jhfqcs3ygdirki3ehghvv5s5ltftkn3tmrvrjvkxgm
-  handlers.py: bafybeibxc5ivan4wyb72tnxejd7wxwc2spvktuidl2caux3lfq6wpokbim
-  models.py: bafybeid3wjbwjafa64iacs3ffuugwolxz6rwhulgfrkanbadxwcn3azsjq
-  tests/__init__.py: bafybeic3534aro4pdtsdcuxywzlgkccczx2elhnwisiq3r6okvnrdu4aia
-  tests/test_behaviours.py: bafybeibskzooqdwp4tcfqyefzviah542hq63c66qgniv6hjctqma7lkwfu
-  tests/test_dialogues.py: bafybeibcwj6lecqywucgeycdf3647foww3k63sqfae575nwclxl2aplfli
-  tests/test_handlers.py: bafybeiessvkmbttxt2xqxpxa2g4zxankrltffzno5iiokmyrpiai3lddbe
-  tests/test_models.py: bafybeicdregkw2fmgxl42lcxrhbl4w54wsqudl4eskigvackt5l5ury5jm
-  tests/test_payloads.py: bafybeid6yxodzxj2zpkavewyas2guyjjtjmr74zoqb7nkmi2efihkwgkqq
-  tests/test_rounds.py: bafybeialtojjvskk4zu47bqvozrldmnudkvlbj7napxtdie3ezzoqti5oy
+  dialogues.py: bafybeidtxe2skn2b6e42ytcrgfossj6pbzj5fmau7lxghihipiq6vlouby
+  fsm_specification.yaml: bafybeiern4xpvzrtlxkhbaum3v636j2oah35h6hspumbsykprn4yo6qocy
+  handlers.py: bafybeihoxmrbvwprjlqhbvpsgai3e2ncag3ivwox6cchwhfdzy5adtktm4
+  models.py: bafybeibii6thyuhurwtfhvo6vpxtwerrfvfq3dxpqm6tzneynfnvoi6w44
 fingerprint_ignore_patterns: []
 connections: []
 contracts: []
 protocols: []
 skills:
-- valory/abstract_round_abci:0.1.0:bafybeifoqz4fs63afcuzf4zjdyn2qu6satezs6kdiakzh7baphzxppeeg4
-- zarathustra/collateralisation_station_abci:0.1.0:bafybeifc2yv6lpso2nnukhurhk36ndptsfz4lc7qav6sw3sz5xtyhf6uqe
+- valory/abstract_round_abci:0.1.0:bafybeihtkb6s7hzbz2pagh2fg6uqhpaulws5wzigkbgmxj6cqj5omgj6yy
+- valory/registration_abci:0.1.0:bafybeifxgaeezqy6lo2walsiiev7ucsrnn4ajn7qnkdddxw7wbfvxzm6bu
+- valory/reset_pause_abci:0.1.0:bafybeih2mzlnpjzuxpzfak2jzrenoww3ibihcxdnorie3mzgwb2wxw2iqa
+- valory/transaction_settlement_abci:0.1.0:bafybeieodqxuzohphmgvpfynf34gsxen2445ln547x25earzctodj5epwi
+- zarathustra/collateralisation_station_abci:0.1.0:bafybeicttefmcyfetkfcxb6ol3i47pjfs4vhof3sjygu63gme6rgzuhh6i
 behaviours:
   main:
     args: {}
-    class_name: ComposedRoundBehaviour
+    class_name: CollaterisationAbciAppConsensusBehaviour
 handlers:
   abci:
     args: {}
