[feat] udated description

--- a/mas/packages/eightballer/contracts/pwn_simple_loan/contract.yaml
+++ b/mas/packages/eightballer/contracts/pwn_simple_loan/contract.yaml
@@ -2,13 +2,14 @@ name: pwn_simple_loan
 author: eightballer
 version: 0.1.0
 type: contract
-description: The scaffold contract scaffolds a contract to be implemented by the developer.
+description: The Simple PWN Loan contract, minted with the support of Mikulas, at
+  EthIstanbul 2023.
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
   __init__.py: bafybeiaplbxsjgaowmigpnrfffa6t223s6suhd6zrydku7ig45fzdwufku
   build/pwn_simple_loan.json: bafybeiess5hjeh6i27oyk2ovolrctdsfzd2t2uvtkxq6ixtqotge4ksaui
-  contract.py: bafybeidlols7g3xbo26tc2tewnk4olypx6uze2je7b5uy775ry6rk7rici
+  contract.py: bafybeiaxrfdetajxzbnl4kkly5eqiprufzjwokatc5prbi6jxs2ddmmj6y
 fingerprint_ignore_patterns: []
 class_name: PwnSimpleLoan
 contract_interface_paths:
