--- a/mas/packages/eightballer/skills/collateralisation_station_abci/skill.yaml
+++ b/mas/packages/eightballer/skills/collateralisation_station_abci/skill.yaml
@@ -2,11 +2,13 @@ name: collateralisation_station_abci
 author: eightballer
 version: 0.1.0
 type: skill
-description: The scaffold skill is a scaffold for your own skill implementation.
+description: The collateralisation station is a skill that enables a mas to create
+  loan offers on the PWN protocol. It is used to create a loan offer against Autonolas
+  components.
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
-  __init__.py: bafybeiecbjihpa3i7y3srhvqfxostrws2pgrrbw562wfwlwbqgvzy25mta
+  __init__.py: bafybeibmpd4i2xq6zupven66f3be6jegooqqxu5dmymsuy2tb3dwgwwqbq
   behaviours.py: bafybeigvne6vbdhnkgoctzbblkfybjjiwiok4cj5ejqnadxuvxnu7yydey
   dialogues.py: bafybeib6ealfz4t7ia24ilmshpi6wo2w6ius76aclyey2qgtvxrmdujema
   fsm_specification.yaml: bafybeidlog5yb2z27nkvytgwucpr7xzcbyhiglntj67u6pwqdq4zg3m4he
@@ -18,9 +20,9 @@ fingerprint:
   tests/test_behaviours.py: bafybeid42xv336nnun4donms37ofp6d2hqdr56zthmfbu3axqneccsqmue
   tests/test_dialogues.py: bafybeicgpgvexkajdxp2vmkwlaazfjsxy6x4tws6jvqvo4f2cngdmm62iq
   tests/test_handlers.py: bafybeidx5esdn6qroqanvcz2axiyghtcdeo76xe2uceeo36hakbv7tkajm
-  tests/test_models.py: bafybeifsebpz7dalxnt5fxut5xvxra223tmhetelbok6zcild4jylmmr2q
+  tests/test_models.py: bafybeidpjnituhcrbox3mirhhicrnyetplfzodv67l46iyqqpwjuy67s4m
   tests/test_payloads.py: bafybeidfclbngzlpmdecnismqh5tsk56r54v7hhvqlia2ulftlqniyrdcy
-  tests/test_rounds.py: bafybeihk2p5pm7cigql4tzblgtdgta2dugudfxm6cfkl3uok5dz4lzobl4
+  tests/test_rounds.py: bafybeieehacaklxxnvcd55hnwi3rcctupgan5g5qh5jtmsstlcdgst3wry
 fingerprint_ignore_patterns: []
 connections: []
 contracts: []
